# Gorgon

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  gorgon-state.db-journal  gorgon.example.yaml  pyproject.toml  requirements.txt  test_basic.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: DEMO_PLACEHOLDER.md
config/: self_improve_safety.yaml
deploy/: README.md  backup.sh
deploy/templates/enterprise/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secrets.yaml  service-account.yaml  service.yaml
deploy/templates/medium-team/: docker-compose.yml  prometheus.yml
deploy/templates/small-team/: docker-compose.yml
dev/bench/: data.js
docs/: BUILD_PROMPTS.md  CASE_STUDY.md  CLEANUP.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY.md  ENTERPRISE_PATTERNS.md  EXAMPLES.md  LESSONS_LEARNED_2026-01-18.md  MEDIA_ENGINE.md  MULTI_REPO_WORKTREE_GUIDE.md  OPENCLAW_HARVEST.md  OPTIMIZATION_SUMMARY.md  PARALLEL_EXECUTION.md  README.md  REPOSITORY_METADATA.md  SELF_HOSTED_BACKEND.md  WHITEPAPER.md  api-reference.md  architecture.md  claude-code-integration.md  configuration.md  creating-workflows.md  dashboard-guide.md  development.md  filesystem-tools.md  installation.md  performance.md  prompt-templates.md  security.md  troubleshooting.md
docs/adr/: 0001-initial-architecture.md
docs/integrations/: github.md  gmail.md  notion.md  openai.md
eval_suites/: builder.yaml  planner.yaml  reviewer.yaml  tester.yaml
examples/: README.md  automated_reporting.json  content_pipeline.json  multi_step_ai.json  vdc_analytics_demo.py
examples/3d-assets/: cli_usage.md  unity_terrain_example.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  KeyboardShortcutsHelp.test.tsx  KeyboardShortcutsHelp.tsx  Layout.tsx  PageLoading.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/hooks/: useApi.ts  useSSE.ts  useToast.ts  useWebSocket.ts
frontend/src/lib/: tauri.ts  websocket.ts  workflow-serializer.ts
migrations/: 013_animus_bridge.sql
scripts/: load_test.py  sync-skills.sh  upgrade-skills.sh  verify_decision_ui.py  worktree-merge.sh  worktree-new.sh  worktree-status.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  git.rs  lib.rs  main.rs
src/test_ai/: __init__.py  api.py  api_errors.py  api_models.py  api_state.py  db.py
tests/: README.md  test_agent_context.py  test_agents.py  test_agents_clients_coverage.py  test_analytics.py  test_analytics_pipeline.py  test_animus_bridge.py  test_api.py  test_api_chat_coverage.py  test_api_coverage.py  test_api_errors.py  test_api_history.py  test_api_key_manager.py  test_api_mcp.py  test_api_routes_coverage.py  test_approval_store.py  test_async_retry.py  test_auth.py  test_backends.py  test_benchmarks.py  test_browser_automation.py  test_budget.py  test_budget_integration.py  test_budget_passthrough.py  test_cache.py  test_cache_coverage.py  test_chat.py  test_checkpoint_resume_e2e.py  test_circuit_breaker.py  test_claude_code_client.py  test_cli.py  test_cli_commands_coverage.py  test_cli_coverage.py  test_cli_history.py  test_cli_mcp.py  test_collectors.py  test_config_settings.py  test_config_yaml.py  test_consensus.py  test_contracts.py  (+122 more)
tests/dashboard/: test_plugin_marketplace.py  test_plugin_marketplace_ui.py  test_workflow_builder.py
tests/tui/: test_app.py  test_commands.py  test_providers.py  test_session.py  test_streaming.py  test_widgets.py
(+349 files in other folders)
