[tool.poetry]
name = "test-ai"
version = "0.1.0"
description = ""
authors = ["Aretedriver <aretedriver@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.14.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
streamlit = "^1.52.2"
google-auth = "^2.45.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.3.0"
google-api-python-client = "^2.187.0"
notion-client = "^2.7.0"
PyGithub = "^2.4.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

