[tool.poetry]
name = "gorgon"
version = "0.2.0"
description = "Multi-agent orchestration framework for production AI workflows"
authors = ["Aretedriver <aretedriver@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.1.0"
anthropic = "^0.40.0"
fastapi = "^0.128.0"
starlette = "^0.51.0"
uvicorn = "^0.34.0"
streamlit = "^1.39.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.150.0"
notion-client = "^2.2.1"
PyGithub = "^2.4.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
aiofiles = "^25.1.0"
apscheduler = "^3.11.0"
urllib3 = "^2.6.0"
pynacl = "^1.6.0"
pyasn1 = "^0.6.1"
typer = "^0.15.0"
rich = "^14.0.0"
pyyaml = "^6.0.0"
jsonschema = "^4.23.0"

[tool.poetry.scripts]
gorgon = "test_ai.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
