[tool.poetry]
name = "gorgon"
version = "1.0.0"
description = "Multi-agent orchestration framework for production AI workflows"
authors = ["Aretedriver <aretedriver@gmail.com>"]
packages = [{include = "test_ai", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.15.0"
anthropic = "^0.76.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
streamlit = "^1.53.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.3.0"
google-api-python-client = "^2.150.0"
notion-client = "^2.2.1"
PyGithub = "^2.4.0"
pydantic = "^2.12.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
aiofiles = "^25.1.0"
apscheduler = "^3.11.0"
urllib3 = "^2.6.0"
pynacl = "^1.6.0"
pyasn1 = "^0.6.1"
typer = "^0.21.0"
rich = "^14.0.0"
pyyaml = "^6.0.0"
jsonschema = "^4.23.0"
slowapi = "^0.1.9"
psycopg2-binary = {version = "^2.9.0", optional = true}

[tool.poetry.extras]
postgres = ["psycopg2-binary"]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.13"

[tool.poetry.scripts]
gorgon = "test_ai.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
