[package]
name = "gorgon-desktop"
version = "0.1.0"
description = "Gorgon Desktop - Multi-agent AI orchestration"
authors = ["AreteDriver"]
license = "MIT"
repository = "https://github.com/AreteDriver/Gorgon"
edition = "2021"

[lib]
name = "gorgon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

# Git operations
git2 = "0.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
